partially fixed apod wrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,8 +65,9 @@ header, footer {
 
 /* Ian changes */
 #apodImg{
-    height: 800px;
+    height: 100%;
     width: 100%;
+    object-fit: contain;
 }
 #apod-date-picker{
     border: 1px solid #fff;
